--- a/public/posts/api-journey-server-side.mdx
+++ b/public/posts/api-journey-server-side.mdx
@@ -348,11 +348,7 @@ Once you take control over API logging, it should be straightforward to implemen
   "sessionId": "51bea312-b713-46eb-a9f4-8af2c4328836",
   "isAuthenticated": true,
   "isAuthorized": true,
-  "scope": [
-    "openid",
-    "profile",
-    "investments"
-  ],
+  "scope": "openid profile investments",
   "claims": {
     "managerId": "10345",
     "role": "user"
