--- a/public/posts/home.mdx
+++ b/public/posts/home.mdx
@@ -34,7 +34,7 @@ This blog is code-centric where code separates technical concerns. I provide a n
 
 ![repos](../images/1/repos.jpg?v=20241231)
 
-The samples cover a developer journey that starts with a security-first setup. I use OAuth to secure APIs and clients with standards-based, portable code. During integration I rehearse error, expiry and concurrency conditions, to ensure reliability.
+The samples cover a business focused developer journey that starts with a security-first setup. I use OAuth to secure APIs and clients with standards-based, portable code. During integration I rehearse error, expiry and concurrency conditions, to ensure reliability.
 
 Any reader can run the code samples as working solutions and borrow ideas from the code. By default, I configure the example APIs and clients to use my personal cloud-hosted authorization server, or you can repoint them to your own.
 
