--- a/public/posts/basicspa-overview.mdx
+++ b/public/posts/basicspa-overview.mdx
@@ -22,7 +22,7 @@ This sample uses the traditional SPA solution, with a JavaScript OpenID Connect 
 
 ### Code Download
 
-Clone the code for the SPA and API with the following command:
+You can get the code for the SPA and API with the following command:
 
 ```bash
 git clone https://github.com/gary-archer/oauth.websample1
